--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,8 +25,11 @@
                 <li><a href="#events" class="nav-link">Events</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <li><a href="register.html" class="nav-link">Register</a></li>
+                <li><a href="quiz.html" class="nav-link">Quiz</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
+                
+
             </ul>
         </div>
     </nav>
