--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -24,73 +24,20 @@
                 <button class="toggle-btn" id="signupToggle">Sign Up</button>
             </div>
 
-            <!-- Login Form - Email OTP Based -->
-            <form class="auth-form active" id="loginForm" onsubmit="handleOTPLogin(event)">
-                <!-- Step 1: Email Input -->
-                <div id="loginStep1" class="login-step active">
+            <!-- Login Form -->
+            <form class="auth-form active" id="loginForm">
+                <!-- Password Login (Default) -->
+                <div id="passwordLoginStep" class="login-step active">
                     <div class="form-group">
-                        <label for="login-email">Email Address</label>
-                        <input type="email" id="login-email" name="email" placeholder="Enter your email" required>
-                        <span class="form-error" id="login-email-error"></span>
-                    </div>
-
-                    <button type="button" class="btn btn-primary auth-btn" onclick="sendOTPForLogin()" id="sendOtpBtn">
-                        Send OTP
-                    </button>
-
-                    <p class="auth-divider">Or use Password</p>
-                    
-                    <button type="button" class="btn btn-secondary" onclick="toggleToPasswordLogin()">
-                        Login with Password
-                    </button>
-                </div>
-
-                <!-- Step 2: OTP Input -->
-                <div id="loginStep2" class="login-step">
-                    <div class="otp-info">
-                        <p>OTP sent to <strong id="otpEmail"></strong></p>
-                        <p class="otp-timer">OTP expires in <span id="otpTimer">10:00</span> minutes</p>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="login-otp">Enter OTP Code</label>
-                        <input 
-                            type="text" 
-                            id="login-otp" 
-                            name="otp" 
-                            placeholder="000000" 
-                            maxlength="6"
-                            pattern="[0-9]{6}"
-                            inputmode="numeric"
-                            required
-                        >
-                        <span class="form-error" id="login-otp-error"></span>
-                    </div>
-
-                    <div class="otp-actions">
-                        <button type="button" class="btn btn-secondary" onclick="resendOTP()" id="resendBtn">
-                            Resend OTP (<span id="resendTimer">30</span>s)
-                        </button>
-                        <button type="submit" class="btn btn-primary auth-btn">Verify OTP</button>
-                    </div>
-
-                    <button type="button" class="btn btn-link" onclick="goBackToEmail()">
-                        ← Use different email
-                    </button>
-                </div>
-
-                <!-- Step 3: Password Login -->
-                <div id="loginStep3" class="login-step">
-                    <div class="form-group">
-                        <label for="login-password">Email</label>
-                        <input type="email" id="login-email-password" name="email" required>
+                        <label for="login-email-password">Email</label>
+                        <input type="email" id="login-email-password" name="email" placeholder="your@email.com" required>
                         <span class="form-error" id="login-email-pw-error"></span>
                     </div>
 
                     <div class="form-group">
                         <label for="login-password">Password</label>
                         <div class="password-input">
-                            <input type="password" id="login-password" name="password" required>
+                            <input type="password" id="login-password" name="password" placeholder="••••••••" required>
                             <button type="button" class="toggle-password" onclick="togglePassword('login-password')">👁️</button>
                         </div>
                         <span class="form-error" id="login-password-error"></span>
@@ -101,11 +48,60 @@
                     </div>
 
                     <button type="button" class="btn btn-primary auth-btn" onclick="handlePasswordLogin()">
-                        Login with Password
+                        Login
                     </button>
 
-                    <button type="button" class="btn btn-secondary" onclick="toggleToOTPLogin()">
-                        ← Use OTP Instead
+                    <p class="auth-divider">Or login with OTP</p>
+                    
+                    <button type="button" class="btn btn-secondary" onclick="showOTPLogin()">
+                        Login with OTP
+                    </button>
+                </div>
+
+                <!-- OTP Login (Optional) -->
+                <div id="otpLoginStep" class="login-step">
+                    <div class="form-group">
+                        <label for="otp-email">Email Address</label>
+                        <input type="email" id="otp-email" name="email" placeholder="your@email.com" required>
+                        <span class="form-error" id="otp-email-error"></span>
+                    </div>
+
+                    <button type="button" class="btn btn-primary auth-btn" onclick="sendOTPForLogin()">
+                        Send OTP
+                    </button>
+
+                    <div id="otpInputSection" style="display: none; margin-top: 20px;">
+                        <div class="otp-info">
+                            <p>OTP sent to <strong id="otpEmailDisplay"></strong></p>
+                            <p class="otp-timer">OTP expires in <span id="otpTimer">10:00</span> minutes</p>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="login-otp">Enter OTP Code</label>
+                            <input 
+                                type="text" 
+                                id="login-otp" 
+                                name="otp" 
+                                placeholder="000000" 
+                                maxlength="6"
+                                pattern="[0-9]{6}"
+                                inputmode="numeric"
+                            >
+                            <span class="form-error" id="login-otp-error"></span>
+                        </div>
+
+                        <div class="otp-actions">
+                            <button type="button" class="btn btn-secondary" onclick="resendOTP()" id="resendBtn">
+                                Resend OTP (<span id="resendTimer">30</span>s)
+                            </button>
+                            <button type="button" class="btn btn-primary auth-btn" onclick="handleOTPLogin()">
+                                Verify OTP
+                            </button>
+                        </div>
+                    </div>
+
+                    <button type="button" class="btn btn-secondary" onclick="showPasswordLogin()" style="margin-top: 15px;">
+                        ← Back to Password Login
                     </button>
                 </div>
             </form>
