feat: remove README and TESTING_GUIDE, add admin panel with styling and functionality
- Deleted README.md and TESTING_GUIDE.md files.
- Created admin panel HTML, CSS, and JavaScript files for managing GDG members.
- Implemented student addition, deletion, and search functionality in the admin panel.
- Added dark mode styling for the admin interface.

--- a/Frontend/about.html
+++ b/Frontend/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About GDG - Google Developer Group</title>
+    <title>About GDG CSMU - Google Developer Group at CSMU College</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-icon">🔧</span>
-                <span class="logo-text">GDG</span>
+                <span class="logo-text">GDG CSMU</span>
             </div>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -34,8 +34,8 @@
     <!-- About Hero Section -->
     <section class="about-hero">
         <div class="container">
-            <h1 class="about-hero-title">About Google Developer Group</h1>
-            <p class="about-hero-subtitle">Building communities. Fostering innovation. Empowering developers worldwide.</p>
+            <h1 class="about-hero-title">About Google Developer Group CSMU</h1>
+            <p class="about-hero-subtitle">Building communities at CSMU College. Fostering innovation. Empowering developers in Panvel.</p>
         </div>
     </section>
 
@@ -50,6 +50,51 @@
                 </div>
                 <div class="section-image slide-in-right">
                     <div class="placeholder-image mission-image">🌍</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CSMU College Section -->
+    <section class="csmu-section page-section">
+        <div class="container">
+            <h2 class="section-title">About CSMU College</h2>
+            <div class="csmu-content">
+                <div class="csmu-info slide-in-left">
+                    <h3>CSMU College - Panvel</h3>
+                    <p><strong>Location:</strong> Old Shendunga Toll Naka, Panvel, Maharashtra</p>
+                    <p>CSMU College is a premier educational institution dedicated to fostering innovation, excellence, and technological advancement. Located in the vibrant city of Panvel, our college serves as a hub for aspiring developers, engineers, and tech enthusiasts from across the region.</p>
+                    <h3 style="margin-top: 20px;">Our Commitment</h3>
+                    <ul style="list-style: none; padding: 0;">
+                        <li>✓ Quality education in cutting-edge technologies</li>
+                        <li>✓ Industry-aligned curriculum and projects</li>
+                        <li>✓ Expert faculty with real-world experience</li>
+                        <li>✓ Strong industry partnerships and connections</li>
+                        <li>✓ State-of-the-art computing facilities</li>
+                        <li>✓ Mentorship and guidance from industry professionals</li>
+                    </ul>
+                </div>
+                <div class="csmu-stats slide-in-right">
+                    <div class="csmu-stat-card">
+                        <div class="stat-icon">🎓</div>
+                        <h4>500+</h4>
+                        <p>Students</p>
+                    </div>
+                    <div class="csmu-stat-card">
+                        <div class="stat-icon">👨‍🏫</div>
+                        <h4>50+</h4>
+                        <p>Faculty Members</p>
+                    </div>
+                    <div class="csmu-stat-card">
+                        <div class="stat-icon">🏆</div>
+                        <h4>25+</h4>
+                        <p>Years of Excellence</p>
+                    </div>
+                    <div class="csmu-stat-card">
+                        <div class="stat-icon">🤝</div>
+                        <h4>100+</h4>
+                        <p>Industry Partners</p>
+                    </div>
                 </div>
             </div>
         </div>
