--- a/Frontend/forgot-password.html
+++ b/Frontend/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password - Google Developer Group</title>
+    <title>Forgot Password - GDG CSMU</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="auth-page">
