--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Google Developer Group</title>
+    <title>Contact GDG CSMU - Google Developer Group at CSMU College</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-icon">🔧</span>
-                <span class="logo-text">GDG</span>
+                <span class="logo-text">GDG CSMU</span>
             </div>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -74,13 +74,13 @@
                     <div class="contact-info-item">
                         <div class="info-icon">📍</div>
                         <h3>Address</h3>
-                        <p>Tech Hub, Innovation District<br>Silicon Valley, CA 94025<br>United States</p>
+                        <p>GDG CSMU<br>Panvel, Old Shendunga Toll Naka<br>CSMU College Campus</p>
                     </div>
 
                     <div class="contact-info-item">
                         <div class="info-icon">📧</div>
                         <h3>Email</h3>
-                        <p><a href="mailto:hello@gdg.com">hello@gdg.com</a><br><a href="mailto:events@gdg.com">events@gdg.com</a></p>
+                        <p><a href="mailto:hello@gdgcsmu.com">hello@gdgcsmu.com</a><br><a href="mailto:events@gdgcsmu.com">events@gdgcsmu.com</a></p>
                     </div>
 
                     <div class="contact-info-item">
@@ -103,6 +103,51 @@
                             <a href="#" class="social-link">Facebook</a>
                             <a href="#" class="social-link">Instagram</a>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Leaders Section -->
+    <section class="team-leaders-section page-section">
+        <div class="container">
+            <h2 class="section-title">Meet Our Team</h2>
+            <p class="team-subtitle">Connect with the passionate leaders driving GDG CSMU forward</p>
+            <div class="team-grid">
+                <div class="team-member-card slide-in-up">
+                    <div class="member-avatar">👨‍💼</div>
+                    <h3>Aditya Sharma</h3>
+                    <p class="member-role">GDG Lead</p>
+                    <p class="member-bio">Passionate developer with 8+ years of experience in full-stack development and community building.</p>
+                    <div class="member-contact">
+                        <a href="mailto:aditya@gdgcsmu.com" class="contact-link">📧 Email</a>
+                        <a href="tel:+919876543210" class="contact-link">📱 Call</a>
+                        <a href="https://twitter.com" class="contact-link" target="_blank">🐦 Twitter</a>
+                    </div>
+                </div>
+
+                <div class="team-member-card slide-in-up">
+                    <div class="member-avatar">👨‍💻</div>
+                    <h3>Harish Patel</h3>
+                    <p class="member-role">Technical Lead</p>
+                    <p class="member-bio">Expert in cloud technologies and backend systems. Love mentoring and building scalable solutions.</p>
+                    <div class="member-contact">
+                        <a href="mailto:harish@gdgcsmu.com" class="contact-link">📧 Email</a>
+                        <a href="tel:+919876543211" class="contact-link">📱 Call</a>
+                        <a href="https://linkedin.com" class="contact-link" target="_blank">💼 LinkedIn</a>
+                    </div>
+                </div>
+
+                <div class="team-member-card slide-in-up">
+                    <div class="member-avatar">👩‍💼</div>
+                    <h3>Priya Deshmukh</h3>
+                    <p class="member-role">Marketing & Events Lead</p>
+                    <p class="member-bio">Creative strategist focused on building community engagement and organizing impactful events.</p>
+                    <div class="member-contact">
+                        <a href="mailto:priya@gdgcsmu.com" class="contact-link">📧 Email</a>
+                        <a href="tel:+919876543212" class="contact-link">📱 Call</a>
+                        <a href="https://instagram.com" class="contact-link" target="_blank">📸 Instagram</a>
                     </div>
                 </div>
             </div>
