--- a/Frontend/quiz.html
+++ b/Frontend/quiz.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Dev Quiz</title>
+<title>GDG CSMU Web Dev Quiz</title>
 
 <style>
 
@@ -31,6 +31,7 @@ body{
     font-size:2.4rem;
     background:linear-gradient(135deg,#8ab4ff,#b388ff);
     -webkit-background-clip:text;
+    background-clip: text;
     -webkit-text-fill-color:transparent;
 }
 
@@ -142,6 +143,23 @@ body{
     pointer-events:none;
     z-index:9999;
 }
+/* HOME BUTTON */
+.btn-home{
+    display:inline-block;
+    margin-top:15px;
+    padding:10px 18px;
+    text-decoration:none;
+    background:#2a2f40;
+    color:white;
+    border-radius:8px;
+    font-weight:bold;
+    transition:0.25s;
+}
+
+.btn-home:hover{
+    background:#3a4160;
+    transform:translateY(-2px);
+}
 
 </style>
 </head>
@@ -153,8 +171,9 @@ body{
 <div class="quiz-header">
 <h1>🧠 Web Development Quiz</h1>
 <p>Test your knowledge</p>
-</div>
 
+<a href="index.html" class="btn btn-home">🏠 Home</a>
+</div>
 <div class="quiz-progress">
 <div class="quiz-progress-bar" id="progressBar"></div>
 </div>
@@ -325,6 +344,19 @@ ctx.fill();
 
 requestAnimationFrame(animate);
 }
+document.getElementById("quizContent").innerHTML=`
+<div class="quiz-results">
+<h2>Quiz Complete!</h2>
+<div class="score">${score}/${quizQuestions.length}</div>
+<p>${Math.round(score/quizQuestions.length*100)}% Correct</p>
+
+<div class="quiz-controls">
+<button class="btn btn-next" onclick="initQuiz()">Try Again</button>
+<a href="index.html" class="btn btn-prev">🏠 Home</a>
+</div>
+
+</div>
+`;
 
 animate();
 
