--- a/Frontend/register.html
+++ b/Frontend/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register - Google Developer Group</title>
+    <title>Register at GDG CSMU - Google Developer Group</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <span class="logo-icon">🔧</span>
-                <span class="logo-text">GDG</span>
+                <span class="logo-text">GDG CSMU</span>
             </div>
             <div class="hamburger" id="hamburger">
                 <span></span>
