feat: add admin and auth routes for user management and authentication

--- a/Frontend/forgot-password.html
+++ b/Frontend/forgot-password.html
@@ -21,6 +21,7 @@
             </div>
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
             </ul>
