--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -26,10 +26,10 @@
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <li><a href="register.html" class="nav-link">Register</a></li>
                 <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+                <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
-                
-
+                <li><a href="profile.html" class="nav-link profile-link" style="display: none;">👤 Profile</a></li>
             </ul>
         </div>
     </nav>
@@ -37,11 +37,52 @@
     <!-- Hero Section with Orbit System -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="hero-title"><span id="typewriter"></span></h1>
-            <p class="hero-subtitle">Join our community of passionate developers, innovators, and tech enthusiasts</p>
+            <h1 class="hero-title" id="typewriterTitle"><span class="typewriter-cursor"></span></h1>
+            <p class="hero-subtitle">Join the official Google Developers Group at CSMU. A community of passionate developers building the future together.</p>
             <div class="hero-buttons">
-                <a href="#events" class="btn btn-primary">Explore Events</a>
-                <a href="login.html" class="btn btn-secondary">Sign In</a>
+                <a href="#community-stats" class="btn btn-primary">👥 Join Community</a>
+                <a href="#events" class="btn btn-secondary">🎯 Upcoming Events</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Community Statistics Section -->
+    <section id="community-stats" class="community-stats">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-icon">👥</div>
+                    <div class="stat-number">561+</div>
+                    <div class="stat-label">Members</div>
+                    <p>Active community members</p>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-icon">🎯</div>
+                    <div class="stat-number">11+</div>
+                    <div class="stat-label">Events</div>
+                    <p>Workshops & conferences</p>
+                </div>
+                <div class="stat-item">
+                    <div class="stat-icon">🛠️</div>
+                    <div class="stat-number">3+</div>
+                    <div class="stat-label">Workshops</div>
+                    <p>Hands-on learning sessions</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Next Event Section -->
+    <section class="next-event">
+        <div class="container">
+            <h2>Next Event</h2>
+            <div class="next-event-content">
+                <div class="next-event-card">
+                    <div class="next-event-icon">📅</div>
+                    <h3>Don't miss out on our upcoming event</h3>
+                    <p id="nextEventStatus">Loading next event...</p>
+                    <button class="btn btn-primary" onclick="document.getElementById('events').scrollIntoView({behavior: 'smooth'})">View All Events</button>
+                </div>
             </div>
         </div>
     </section>
