--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -26,8 +26,18 @@
 
             <!-- Login Form -->
             <form class="auth-form active" id="loginForm">
-                <!-- Password Login (Default) -->
-                <div id="passwordLoginStep" class="login-step active">
+                <!-- Login Method Selector -->
+                <div class="login-method-tabs">
+                    <button type="button" class="login-method-btn active" id="emailLoginMethodBtn" onclick="showLoginMethod('email')">
+                        📧 Email & Password
+                    </button>
+                    <button type="button" class="login-method-btn" id="otpLoginMethodBtn" onclick="showLoginMethod('otp')">
+                        📱 Login with OTP
+                    </button>
+                </div>
+
+                <!-- Email & Password Login -->
+                <div id="emailLoginStep" class="login-step active">
                     <div class="form-group">
                         <label for="login-email-password">Email</label>
                         <input type="email" id="login-email-password" name="email" placeholder="your@email.com" required>
@@ -50,15 +60,9 @@
                     <button type="button" class="btn btn-primary auth-btn" onclick="handlePasswordLogin()">
                         Login
                     </button>
-
-                    <p class="auth-divider">Or login with OTP</p>
-                    
-                    <button type="button" class="btn btn-secondary" onclick="showOTPLogin()">
-                        Login with OTP
-                    </button>
                 </div>
 
-                <!-- OTP Login (Optional) -->
+                <!-- OTP Login -->
                 <div id="otpLoginStep" class="login-step">
                     <div class="form-group">
                         <label for="otp-email">Email Address</label>
@@ -99,10 +103,6 @@
                             </button>
                         </div>
                     </div>
-
-                    <button type="button" class="btn btn-secondary" onclick="showPasswordLogin()" style="margin-top: 15px;">
-                        ← Back to Password Login
-                    </button>
                 </div>
             </form>
 
