--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -562,7 +562,11 @@
         // Render profile UI
         function renderProfile() {
             const container = document.getElementById('profileContent');
-            const joinDate = new Date().toLocaleDateString('en-US', {
+            const joinDate = currentUser.createdAt ? new Date(currentUser.createdAt).toLocaleDateString('en-US', {
+                year: 'numeric',
+                month: 'long',
+                day: 'numeric'
+            }) : new Date().toLocaleDateString('en-US', {
                 year: 'numeric',
                 month: 'long',
                 day: 'numeric'
@@ -715,24 +719,14 @@
 
             try {
                 // Make API call to update profile
-                const token = localStorage.getItem('token');
-                const response = await fetch('http://localhost:5000/api/auth/update-profile', {
-                    method: 'PUT',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Authorization': `Bearer ${token}`
-                    },
-                    body: JSON.stringify({ name: newName })
-                });
+                const response = await AuthAPI.updateProfile(newName);
 
-                const data = await response.json();
-
-                if (!response.ok) {
-                    throw new Error(data.message || 'Failed to update profile');
+                if (!response.success) {
+                    throw new Error(response.message || 'Failed to update profile');
                 }
 
-                currentUser.name = newName;
-                localStorage.setItem('user', JSON.stringify(currentUser));
+                currentUser.name = response.user.name;
+                localStorage.setItem('user', JSON.stringify(response.user));
                 
                 showAlert('Profile updated successfully!', 'success');
                 cancelEdit();
