feat: add creator link to navigation in multiple pages

--- a/Frontend/forgot-password.html
+++ b/Frontend/forgot-password.html
@@ -22,6 +22,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
+                <li><a href="creator.html" class="nav-link">👨‍💻 Creator</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
             </ul>
