--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -26,6 +26,7 @@
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <li><a href="register.html" class="nav-link">Register</a></li>
                 <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
+                <li><a href="creator.html" class="nav-link">👨‍💻 Creator</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
             </ul>
