--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -27,6 +27,7 @@
                 <li><a href="register.html" class="nav-link">Register</a></li>
                 <li><a href="quiz.html" class="nav-link">Quiz</a></li>
                 <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
+                <li><a href="creator.html" class="nav-link">👨‍💻 Creator</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
                 <li><a href="login.html" class="nav-link auth-link">Login</a></li>
                 <li><a href="profile.html" class="nav-link profile-link" style="display: none;">👤 Profile</a></li>
