fix: update contact links with new email and GitHub profile

--- a/Frontend/creator.html
+++ b/Frontend/creator.html
@@ -545,13 +545,10 @@
 
                     <!-- Contact Links -->
                     <div class="contact-links">
-                        <a href="mailto:pranav@example.com" class="contact-btn" title="Send Email">
+                        <a href="mailto:pranavnere647@gmail.com" class="contact-btn" title="Send Email">
                             <span>📧</span> Email
                         </a>
-                        <a href="https://linkedin.com" target="_blank" class="contact-btn" title="LinkedIn Profile">
-                            <span>💼</span> LinkedIn
-                        </a>
-                        <a href="https://github.com" target="_blank" class="contact-btn" title="GitHub Profile">
+                        <a href="https://github.com/Pranav104-1" target="_blank" class="contact-btn" title="GitHub Profile">
                             <span>🐙</span> GitHub
                         </a>
                     </div>
