Add interactive web development quiz with difficulty selection and scoring system

--- a/Frontend/creator.html
+++ b/Frontend/creator.html
@@ -82,6 +82,307 @@
             }
         }
 
+        @media (max-width: 600px) {
+            .creator-page {
+                padding: 40px 15px 30px;
+            }
+
+            .creator-header {
+                margin-bottom: 40px;
+            }
+
+            .creator-header h1 {
+                font-size: 2rem;
+                margin-bottom: 15px;
+            }
+
+            .creator-header p {
+                font-size: 1rem;
+                margin-bottom: 8px;
+            }
+
+            .creator-subtitle {
+                font-size: 0.95rem;
+            }
+
+            .creator-content {
+                grid-template-columns: 1fr;
+                gap: 25px;
+                margin-bottom: 40px;
+            }
+
+            .profile-card {
+                padding: 25px 20px;
+                position: relative;
+                top: 0;
+            }
+
+            .creator-avatar {
+                width: 120px;
+                height: 120px;
+                font-size: 4rem;
+                margin: 0 auto 15px;
+            }
+
+            .creator-name {
+                font-size: 1.5rem;
+            }
+
+            .creator-title {
+                font-size: 1rem;
+            }
+
+            .creator-info {
+                margin-top: 20px;
+                padding-top: 20px;
+            }
+
+            .info-item {
+                margin-bottom: 12px;
+                gap: 10px;
+            }
+
+            .info-label {
+                font-size: 0.85rem;
+                min-width: 70px;
+            }
+
+            .info-value {
+                font-size: 0.95rem;
+            }
+
+            .info-section {
+                padding: 25px 20px;
+                margin-bottom: 20px;
+            }
+
+            .section-title {
+                font-size: 1.3rem;
+                margin-bottom: 15px;
+                gap: 10px;
+                padding-bottom: 10px;
+            }
+
+            .about-text {
+                font-size: 1rem;
+                line-height: 1.6;
+            }
+
+            .stats-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 15px;
+                margin-top: 15px;
+            }
+
+            .stat-card {
+                padding: 15px;
+            }
+
+            .stat-number {
+                font-size: 1.5rem;
+            }
+
+            .stat-label {
+                font-size: 0.85rem;
+            }
+
+            .skills-container {
+                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+                gap: 12px;
+                margin-top: 15px;
+            }
+
+            .skill-badge {
+                padding: 10px 16px;
+                font-size: 0.9rem;
+            }
+
+            .tech-grid {
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+                gap: 12px;
+                margin-top: 15px;
+            }
+
+            .tech-item {
+                padding: 15px 10px;
+                font-size: 0.9rem;
+            }
+
+            .contact-links {
+                gap: 10px;
+                margin-top: 20px;
+            }
+
+            .contact-btn {
+                flex: 1;
+                min-width: 120px;
+                padding: 10px 15px;
+                font-size: 0.95rem;
+                gap: 6px;
+            }
+
+            .achievement-item {
+                gap: 12px;
+                padding: 15px;
+                margin-bottom: 12px;
+            }
+
+            .achievement-icon {
+                font-size: 1.5rem;
+                min-width: 40px;
+            }
+
+            .achievement-title {
+                font-size: 1rem;
+                margin-bottom: 3px;
+            }
+
+            .achievement-desc {
+                font-size: 0.9rem;
+            }
+
+            .badge {
+                padding: 5px 12px;
+                font-size: 0.8rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .creator-page {
+                padding: 30px 10px 20px;
+            }
+
+            .creator-header {
+                margin-bottom: 30px;
+            }
+
+            .creator-header h1 {
+                font-size: 1.6rem;
+                margin-bottom: 12px;
+            }
+
+            .creator-header p {
+                font-size: 0.95rem;
+                margin-bottom: 6px;
+            }
+
+            .creator-subtitle {
+                font-size: 0.9rem;
+            }
+
+            .creator-avatar {
+                width: 100px;
+                height: 100px;
+                font-size: 3.5rem;
+                margin: 0 auto 12px;
+            }
+
+            .creator-name {
+                font-size: 1.3rem;
+            }
+
+            .creator-title {
+                font-size: 0.95rem;
+            }
+
+            .profile-card {
+                padding: 20px 15px;
+            }
+
+            .info-section {
+                padding: 20px 15px;
+                margin-bottom: 15px;
+            }
+
+            .section-title {
+                font-size: 1.2rem;
+                margin-bottom: 12px;
+                gap: 8px;
+                padding-bottom: 8px;
+            }
+
+            .about-text {
+                font-size: 0.95rem;
+                line-height: 1.5;
+            }
+
+            .stats-grid {
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+            }
+
+            .stat-card {
+                padding: 12px;
+            }
+
+            .stat-number {
+                font-size: 1.2rem;
+            }
+
+            .stat-label {
+                font-size: 0.8rem;
+            }
+
+            .skills-container {
+                grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+                gap: 10px;
+            }
+
+            .skill-badge {
+                padding: 8px 12px;
+                font-size: 0.85rem;
+                border-radius: 20px;
+            }
+
+            .tech-grid {
+                grid-template-columns: repeat(auto-fit, minmax(85px, 1fr));
+                gap: 10px;
+            }
+
+            .tech-item {
+                padding: 12px 8px;
+                font-size: 0.8rem;
+            }
+
+            .contact-links {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            .contact-btn {
+                width: 100%;
+                padding: 10px 12px;
+                font-size: 0.9rem;
+                min-width: auto;
+            }
+
+            .achievement-item {
+                gap: 10px;
+                padding: 12px;
+                margin-bottom: 10px;
+            }
+
+            .achievement-icon {
+                font-size: 1.3rem;
+                min-width: 35px;
+            }
+
+            .achievement-title {
+                font-size: 0.95rem;
+            }
+
+            .achievement-desc {
+                font-size: 0.85rem;
+            }
+
+            .badge {
+                padding: 4px 10px;
+                font-size: 0.75rem;
+                margin-right: 6px;
+                margin-bottom: 6px;
+            }
+        }
+
         /* Profile Card */
         .profile-card {
             background: white;
@@ -255,6 +556,19 @@
         @media (max-width: 768px) {
             .stats-grid {
                 grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 600px) {
+            .stats-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .stats-grid {
+                grid-template-columns: 1fr 1fr;
+                gap: 8px;
             }
         }
 
