--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#events" class="nav-link">Events</a></li>
                 <li><a href="contact.html" class="nav-link">Contact</a></li>
                 <li><a href="register.html" class="nav-link">Register</a></li>
-                <li><a href="quiz.html" class="nav-link">Quiz</a></li>
+                <li><a href="quiz-v2.html" class="nav-link">Quiz</a></li>
                 <li><a href="playground.html" class="nav-link">💻 Playground</a></li>
                 <li><a href="creator.html" class="nav-link">👨‍💻 Creator</a></li>
                 <li><button id="darkModeBtn" class="dark-mode-btn" title="Toggle Dark Mode">🌙</button></li>
