--- a/Frontend/profile.html
+++ b/Frontend/profile.html
@@ -460,6 +460,266 @@
         body.dark-mode .section-divider {
             background: linear-gradient(90deg, transparent, #444, transparent);
         }
+
+        /* TABLET & MEDIUM SCREENS */
+        @media (max-width: 768px) {
+            .profile-content {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* SMALL PHONES */
+        @media (max-width: 600px) {
+            .profile-container {
+                padding: 30px 15px;
+            }
+
+            .profile-wrapper {
+                max-width: 100%;
+            }
+
+            .profile-header {
+                margin-bottom: 25px;
+            }
+
+            .profile-header h1 {
+                font-size: 2rem;
+                margin-bottom: 8px;
+            }
+
+            .profile-header p {
+                font-size: 1rem;
+            }
+
+            .profile-content {
+                grid-template-columns: 1fr;
+                gap: 20px;
+                margin-bottom: 20px;
+            }
+
+            .profile-card {
+                padding: 20px;
+                margin-bottom: 15px;
+            }
+
+            .profile-card h2 {
+                font-size: 1.3rem;
+                margin-bottom: 15px;
+                gap: 8px;
+            }
+
+            .profile-avatar {
+                width: 80px;
+                height: 80px;
+                font-size: 2.5rem;
+                margin: 0 auto 15px;
+            }
+
+            .profile-info-group {
+                margin-bottom: 15px;
+            }
+
+            .profile-label {
+                font-size: 0.8rem;
+                margin-bottom: 4px;
+            }
+
+            .profile-value {
+                font-size: 1rem;
+            }
+
+            .profile-stats {
+                grid-template-columns: 1fr 1fr;
+                gap: 12px;
+                margin-top: 15px;
+            }
+
+            .stat-box {
+                padding: 12px;
+            }
+
+            .stat-number {
+                font-size: 1.5rem;
+                margin-bottom: 3px;
+            }
+
+            .stat-label {
+                font-size: 0.85rem;
+            }
+
+            .profile-actions {
+                grid-column: 1 / -1;
+                gap: 10px;
+            }
+
+            .btn-edit, .btn-logout, .btn-save, .btn-cancel {
+                padding: 10px 16px;
+                font-size: 0.9rem;
+                letter-spacing: 0.5px;
+                min-height: 40px;
+            }
+
+            .input-group {
+                margin-bottom: 15px;
+            }
+
+            .input-group label {
+                font-size: 0.85rem;
+                margin-bottom: 6px;
+            }
+
+            .input-group input,
+            .input-group textarea {
+                padding: 10px;
+                font-size: 0.95rem;
+            }
+
+            .role-badge {
+                padding: 4px 10px;
+                font-size: 0.8rem;
+            }
+
+            .alert {
+                padding: 12px 15px;
+                font-size: 0.95rem;
+                margin-bottom: 15px;
+            }
+
+            .section-divider {
+                margin: 20px 0;
+            }
+        }
+
+        /* EXTRA SMALL PHONES */
+        @media (max-width: 480px) {
+            body {
+                font-size: 14px;
+            }
+
+            .profile-container {
+                padding: 20px 10px;
+            }
+
+            .profile-header {
+                margin-bottom: 20px;
+            }
+
+            .profile-header h1 {
+                font-size: 1.6rem;
+                margin-bottom: 6px;
+            }
+
+            .profile-header p {
+                font-size: 0.95rem;
+            }
+
+            .profile-content {
+                gap: 15px;
+            }
+
+            .profile-card {
+                padding: 15px;
+                margin-bottom: 10px;
+            }
+
+            .profile-card h2 {
+                font-size: 1.2rem;
+                margin-bottom: 12px;
+                gap: 6px;
+            }
+
+            .profile-avatar {
+                width: 70px;
+                height: 70px;
+                font-size: 2rem;
+                margin: 0 auto 12px;
+            }
+
+            .profile-info-group {
+                margin-bottom: 12px;
+            }
+
+            .profile-label {
+                font-size: 0.75rem;
+                margin-bottom: 4px;
+            }
+
+            .profile-value {
+                font-size: 0.95rem;
+                word-break: break-word;
+            }
+
+            .profile-stats {
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+                margin-top: 10px;
+            }
+
+            .stat-box {
+                padding: 10px;
+            }
+
+            .stat-number {
+                font-size: 1.3rem;
+                margin-bottom: 2px;
+            }
+
+            .stat-label {
+                font-size: 0.8rem;
+            }
+
+            .profile-actions {
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .btn-edit, .btn-logout, .btn-save, .btn-cancel {
+                width: 100%;
+                padding: 10px 12px;
+                font-size: 0.85rem;
+                letter-spacing: 0.3px;
+            }
+
+            .input-group {
+                margin-bottom: 12px;
+            }
+
+            .input-group label {
+                font-size: 0.8rem;
+            }
+
+            .input-group input,
+            .input-group textarea {
+                padding: 8px;
+                font-size: 0.9rem;
+            }
+
+            .role-badge {
+                padding: 3px 8px;
+                font-size: 0.75rem;
+            }
+
+            .alert {
+                padding: 10px 12px;
+                font-size: 0.9rem;
+                margin-bottom: 12px;
+            }
+
+            .section-divider {
+                margin: 15px 0;
+            }
+
+            .loading {
+                font-size: 0.9rem;
+            }
+
+            .spinner {
+                width: 16px;
+                height: 16px;
+                border: 2px solid rgba(102, 126, 234, 0.3);
+                border-top: 2px solid #667eea;
+            }
+        }
     </style>
 </head>
 <body>
